--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,8 @@ services:
                         - "LIBGL_ALWAYS_SOFTWARE=1"
                         - "DISPLAY=$DISPLAY"
                         - "AUTH=$AUTH"
+                        - "PULSE_COOKIE=/tmp/pulse/cookie"
+                        - "PULSE_SERVER=unix:/tmp/pulse/native"
                 device_cgroup_rules:
                         - "a *:* rmw"
                 tty: true
