--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,11 @@
-version: '3'
+version: '2.3'
 services:
         limo_foxy:
                 network_mode: host
                 volumes:
                         - '/dev:/dev'
                         - '/tmp/.X11-unix:/tmp/.X11-unix'
+                        - '$PWD/src:/root/ros2_ws/src_ext'
                 privileged: true
                 environment:
                         - "XAUTHORITY=$AUTH"
