separate language-pack install

--- a/limo-foxy/Dockerfile
+++ b/limo-foxy/Dockerfile
@@ -4,6 +4,7 @@ ENV DEBIAN_FRONTEND=noninteractive
 
 WORKDIR /root/ros2_ws/
 
+RUN apt install -y language-pack-ja
 RUN apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 42D5A192B819C5DA \
     && apt-get update \
     && apt-get install -qq -y --no-install-recommends \
@@ -38,7 +39,6 @@ RUN apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 42D5A192B819C5DA \
     python3-pyaudio \
     libsox-fmt-mp3 \
     alsa-base \
-    language-pack-ja \
     && rm -rf /var/lib/apt/lists/*
 
 RUN python3 -m pip install gtts
