--- a/limo-foxy/Dockerfile
+++ b/limo-foxy/Dockerfile
@@ -41,6 +41,7 @@ RUN apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 42D5A192B819C5DA \
     python3-pyaudio \
     libsox-fmt-mp3 \
     alsa-base \
+    alsa-utils \
     && rm -rf /var/lib/apt/lists/*
 
 RUN python3 -m pip install gtts
